@@ -61,6 +61,6 @@ class PageRepository extends BaseRepository
                 $queryBuilder->expr()->gte('tstamp', $queryBuilder->createNamedParameter($tstamp, PDO::PARAM_INT))
             )
             ->executeQuery()
-            ->fetchAll();
+            ->fetchAllAssociative();
     }
 }
