@@ -25,6 +25,8 @@ Upcoming Version
 [TASK]    Remove obsolete page access check in backend module
 [TASK]    Remove obsolete ignoreErrors pattern for PHPStan
 [TASK]    Apply changes from php-cs-fixer
+[TASK]    Migrate fetch and fetchAll commands
+[TASK]    Add ignoreErrors setting for PHPStan for backend controller for v11
 
 Version 4.6.5, 26 May 2023
 [BUGFIX]  Fix fetching tags from Sphinx
